# NeonDJ-Pro

./: .gitignore  main.py  pyproject.toml  requirements.txt  test_loader.py
audio/: analyzer.py  audio_engine.py  audio_loader.py  clock.py  deck_player.py  metadata.py  track.py  transport.py  waveform.py
config/: config.json  constants.py  settings.py
controller/: app_controller.py  browser_controller.py  deck_controller.py
database/: database.py  track_repository.py
tests/: test_analyzer.py  test_audio_engine.py  test_database.py  test_import.py  test_loader.py  test_waveform.py
themes/: colors.py  theme_manager.py
ui/application/: application.py
ui/widgets/: panel.py
ui/widgets/browser/: browser_widget.py  track_table.py
ui/widgets/deck/: deck_widget.py
ui/widgets/waveform/: waveform_widget.py
ui/windows/: base_window.py  main_window.py
utils/: logger.py
